# distroclone

./: .gitignore  README.md  setup.cfg
distroclone/: main.py
github/: distribution.yaml
