[metadata]
name = distroclone
version = 0.0.1
url = https://github.com/rkent/rosdisto-import
project_urls =
    GitHub =  https://github.com/rkent/rosdisto-import
author = R. Kent James
author_email = kent@caspia.com
maintainer = R. Kent James
maintainer_email = kent@caspia.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Documentation
license = Apache License, Version 2.0
description = Import (clone) rosdistro repositories using vcstool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rosdistro

[options]
python_requires = >=3.6
install_requires =
    catkin_pkg
    rosdistro
    vcstool
    setuptools>=40.6.0
packages = find:
zip_safe = false

[options.entry_points]
console_scripts =
    distroclone = distroclone.main:main
